# minillm

./: .gitignore  Chat.md  LICENSE  README.md  pyproject.toml  snippets.ipynb
configs/pretrain/: model_config.json  script_config.json  train_config.json
examples/: README.md
examples/configs/common/: model_config.small.json  (+1 more)
examples/scripts/: run_dpo.sh  run_full_sft.sh  run_grpo.sh  run_lora.sh  run_ppo.sh  run_pretrain.sh  run_spo.sh  run_tokenizer.sh
minillm/: __init__.py
minillm/dataset/: lm_dataset.py
minillm/infer/: chat_openai_api.py  convert_model.py  serve_openai_api.py  web_demo.py
minillm/inference/: server_api.py  triton.ipynb
minillm/model/: config.py  flash_attn_4.py  lora.py  model_base.py  model_io.py  model_lora.py  model_minillm.py  model_v1.py  readme.md  triton_flash_attn.py
minillm/rlhf/: ds_rm.py  grpo.py  ppo.py  reward_model.py  train_rm.py
minillm/test/: eval_llm.py  test_tokenizer.py
minillm/tests/: eval_model.py  pretrain_test.py  test_chat_template.py
minillm/train/: dataset.py  distill_reason.py  dpo.py  pretrain.py  sft.py  sft_lora.py  train_sft.py
minillm/trainer/: configs.py  train_distillation.py  train_dpo.py  train_full_sft.py  train_grpo.py  train_lora.py  train_ppo.py  train_pretrain.py  train_reason.py  train_spo.py  train_tokenizer.py  trainer_utils.py
minillm/utils/: export_tb_chart.py  log_example.py  mllog.py  train_util.py
model/: config.py  model_base.py  model_v1.py
tests/: pretrain_test.py  test_chat_template.py
train/: dataset.py  pretrain.py  train_sft.py
utils/: log_example.py  mllog.py
(+14 files in other folders)
